--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,33 @@
-.App {
+/* .App {
   text-align: center;
+} */
+
+.App {
+  font-family: sans-serif;
+  text-align: center;
+  background-color: #f5f5f5;
+  padding: "0px 40px";
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App-header {
+  padding: "0px 40px";
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
 }
 
+.typed-text {
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 1.5;
+  color: #333;
+  margin-top: 20px;
+  padding: "0px 40px";
+}
+
+/* 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -35,4 +56,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
